unit test multiplication contract from abi-gen, restructure folders

--- a/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/Wigo4It.Blockchain.Core.Tests.csproj
+++ b/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/Wigo4It.Blockchain.Core.Tests.csproj
@@ -196,6 +196,7 @@
     </Compile>
     <Compile Include="ContractMultiplicationSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTests\ContractDeploymentTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
