--- a/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.csproj
+++ b/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.csproj
@@ -106,6 +106,11 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Contracts\Calc\Multiplication.sol" />
+    <Content Include="Contracts\SmartIdentity\Migrations.sol" />
+    <Content Include="Contracts\SmartIdentity\SmartIdentity.sol" />
+    <Content Include="Contracts\SmartIdentity\SmartIdentityRegistry.sol" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
