passing unittest addEndorsement: attribute for owner with gas

--- a/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/Wigo4It.Blockchain.Core.Tests.csproj
+++ b/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/Wigo4It.Blockchain.Core.Tests.csproj
@@ -197,6 +197,7 @@
     <Compile Include="ContractMultiplicationSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTests\ContractDeploymentTests.cs" />
+    <Compile Include="UnitTests\EndorsementTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
