--- a/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/packages.config
+++ b/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/packages.config
@@ -10,22 +10,11 @@
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
-  <package id="Nethereum.ABI" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.Accounts" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.Contracts" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.Hex" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.JsonRpc.Client" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.JsonRpc.RpcClient" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.KeyStore" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.RLP" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.RPC" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.Signer" version="2.4.0" targetFramework="net461" />
+  <package id="Nethereum.Portable" version="2.4.0" targetFramework="net461" />
   <package id="Nethereum.TestRPCRunner" version="1.0.0" targetFramework="net461" />
-  <package id="Nethereum.Util" version="2.4.0" targetFramework="net461" />
-  <package id="Nethereum.Web3" version="2.4.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="Portable.BouncyCastle" version="1.8.1" targetFramework="net461" />
+  <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net461" />
   <package id="SpecFlow" version="2.3.0" targetFramework="net461" />
   <package id="SpecRun.Runner" version="1.7.0" targetFramework="net461" />
   <package id="SpecRun.SpecFlow" version="1.7.0" targetFramework="net461" />
