--- a/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.csproj
+++ b/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.csproj
@@ -116,22 +116,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\EphimerisLynx\AttributeService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\CertificateService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\ConstantGasTransactionService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\FactoryService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\IDControllerService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\IDService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\IMultisigService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\ITransactionService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\MigrationsService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\MortalService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\MultiOwnedService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\OwnedService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\RegistryService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\stringsService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\TransactionService.cs" />
-    <Compile Include="Contracts\EphimerisLynx\WatchdogService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\AttributeService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\CertificateService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\ConstantGasTransactionService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\FactoryService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\IDControllerService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\IDService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\IMultisigService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\ITransactionService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\MigrationsService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\MortalService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\MultiOwnedService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\OwnedService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\RegistryService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\stringsService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\TransactionService.cs" />
+    <Compile Include="Contracts\EphemerisLynx\WatchdogService.cs" />
     <Compile Include="Contracts\SmartIdentity\Migrations.cs" />
     <Compile Include="Contracts\Calc\Multiplication.cs" />
     <Compile Include="Contracts\SmartIdentity\SmartIdentity.cs" />
