--- a/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/Wigo4It.Blockchain.Core.Tests.csproj
+++ b/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/Wigo4It.Blockchain.Core.Tests.csproj
@@ -193,6 +193,9 @@
       <Name>Wigo4It.Blockchain.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UnitTests\EphemerisLynx\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
