--- a/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/Wigo4It.Blockchain.Core.Tests.csproj
+++ b/src/Wigo4It.Blockchain.Core/Wigo4It.Blockchain.Core.Tests/Wigo4It.Blockchain.Core.Tests.csproj
@@ -162,6 +162,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTests\ContractDeploymentTests.cs" />
     <Compile Include="UnitTests\EndorsementTest.cs" />
+    <Compile Include="UnitTests\EphemerisLynx\AttributeTest.cs" />
+    <Compile Include="UnitTests\EphemerisLynx\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -193,9 +195,7 @@
       <Name>Wigo4It.Blockchain.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UnitTests\EphemerisLynx\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
